VALIDATE-WITH-HASH - Hashcode validation soap endpoint and some rest endpoint changes.

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -8,5 +8,8 @@ validation.error.message.dataFile.filename = Invalid filename. Can only return d
 validation.error.message.signaturePolicy = Invalid signature policy
 validation.error.message.general = Invalid value
 validation.error.message.invalidRequest = Invalid request
-validation.error.message.hashAlgo=Invalid hash algorithm
-validation.error.message.signatureExtension=Invalid filename. Can only accept xml files.
+validation.error.message.hashAlgo = Invalid hash algorithm
+validation.error.message.signatureExtension= Invalid filename extension. Only xml files accepted.
+validation.error.message.filename.format = Invalid filename format
+validation.error.message.signatureFile.invalidBase64 = Signature file is not valid base64 encoded string
+validation.error.message.dataFile.filename.format = Invalid datafile filename format
