--- a/siva-parent/siva-webapp/pom.xml
+++ b/siva-parent/siva-webapp/pom.xml
@@ -169,7 +169,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>2.5</version>
                 <executions>
                     <execution>
                         <id>wsimport</id>
@@ -180,6 +180,7 @@
                         <configuration>
                             <wsdlUrls>
                                 <wsdlUrl>src/main/resources/wsdl/siva.wsdl</wsdlUrl>
+                                <wsdlUrl>src/main/resources/wsdl/siva-hashcode-validation.wsdl</wsdlUrl>
                                 <wsdlUrl>src/main/resources/wsdl/siva-datafiles.wsdl</wsdlUrl>
                             </wsdlUrls>
                             <sourceDestDir>target/generated-sources/wsdlimport/siva</sourceDestDir>
