--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
+        <dss.version>5.2.d4j.3</dss.version>
+        <spring.boot.version>1.5.18.RELEASE</spring.boot.version>
+        <powermock.version>1.7.3</powermock.version>
     </properties>
 
     <reporting>
