--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -124,7 +124,11 @@
                 <artifactId>powermock-api-mockito</artifactId>
                 <version>${powermock.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
