--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -39,13 +39,28 @@
     </modules>
 
     <properties>
-        <cxf.version>3.1.13</cxf.version>
+        <cxf.version>3.2.7</cxf.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>2.10.0</mockito.version>
+        <mockito.version>2.23.4</mockito.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>27.0.1-jre</version>
+            </dependency>
             <!-- DSS -->
             <dependency>
                 <groupId>org.digidoc4j.dss</groupId>
@@ -66,12 +81,6 @@
                 <groupId>org.digidoc4j.dss</groupId>
                 <artifactId>dss-spi</artifactId>
                 <version>${dss.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.bouncycastle</groupId>
-                        <artifactId>*</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
             <!-- Spring boot -->
@@ -155,7 +164,7 @@
             <dependency>
                 <groupId>com.domingosuarez.boot</groupId>
                 <artifactId>spring-boot-starter-jade4j</artifactId>
-                <version>0.3.1</version>
+                <version>0.3.0</version>
                 <exclusions>
                     <exclusion>
                         <groupId>de.neuland-bfi</groupId>
@@ -228,19 +237,19 @@
             <dependency>
                 <groupId>com.github.ben-manes.caffeine</groupId>
                 <artifactId>caffeine</artifactId>
-                <version>2.3.1</version>
+                <version>2.6.2</version>
             </dependency>
 
             <!-- Apache commons -->
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.10</version>
+                <version>1.11</version>
             </dependency>
             <dependency>
                 <groupId>org.zeroturnaround</groupId>
                 <artifactId>zt-zip</artifactId>
-                <version>1.9</version>
+                <version>1.13</version>
                 <type>jar</type>
             </dependency>
 
@@ -248,35 +257,35 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.18</version>
+                <version>1.18.4</version>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.9.7</version>
+                <version>2.9.8</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.9.7</version>
+                <version>2.9.8</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
-                <version>2.9.7</version>
+                <version>2.9.8</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
-                <version>20160212</version>
+                <version>20180813</version>
             </dependency>
 
             <!-- DB for webapp settings -->
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>1.8.0.10</version>
+                <version>2.4.1</version>
             </dependency>
 
             <dependency>
