--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,13 @@ sudo: false
 cache: false
 jdk:
 - openjdk8
-env:
-  - TMPDIR=/tmp
-services:
-  - docker
-addons:
-  apt:
-    sources:
-      - deadsnakes
-    packages:
-      - python3
-      - python3-dev
-      - python3-setuptools
-      - unzip
 before_install:
-- export TZ=Estonia/Tallinn
-- python3 --version
-- easy_install3 --user future
-- easy_install3 --user pyyaml
-- easy_install3 --user requests
-- easy_install --user pyresttest
-branchespython-dev:
+- export TZ=Europe/Helsinki
+branches:
   only:
   - develop
+  - master
 install: true
-before_script: ls -al $TMPDIR
 script: ./mvnw clean install -q -P\!dependency-check
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
