SIVA-127 Hashcode extra features + soap support

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -11,5 +11,6 @@ validation.error.message.invalidRequest = Invalid request
 validation.error.message.hashAlgo = Invalid hash algorithm
 validation.error.message.signatureExtension= Invalid filename extension. Only xml files accepted.
 validation.error.message.filename.format = Invalid filename format
-validation.error.message.signatureFile.invalidBase64 = Signature file is not valid base64 encoded string
+validation.error.message.signatureFiles.invalid = Invalid SignatureFiles format
+validation.error.message.signatureFile.signature.invalidBase64 = Signature file is not valid base64 encoded string
 validation.error.message.dataFile.filename.format = Invalid datafile filename format
