--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,39 +20,58 @@ markdown_extensions:
 pages:
 - VERSION HISTORY: version_info.md
 - INTRODUCTION: index.md
-- 1. DEFINITIONS: siva2/definitions.md
-- 2. BACKGROUND: siva2/overview.md
+- 1. DEFINITIONS: siva3/definitions.md
+- 2. BACKGROUND: siva3/overview.md
 - 3. STRUCTURE & ACTIVITIES:
-      - 3.1 Component model: siva2/structure_and_activities.md
-      - 3.2 Use cases: siva2/use_cases.md
-- 4. INTERFACES: siva2/interfaces.md
+      - 3.1 Component model: siva3/structure_and_activities.md
+      - 3.2 Use cases: siva3/use_cases.md
+- 4. INTERFACES: siva3/interfaces.md
 - 5. DEPLOYMENT:
-      - 5.1 Deployment model: siva2/deployment.md
-      - 5.2 System integrator's guide: siva2/systemintegrators_guide.md
+      - 5.1 Deployment model: siva3/deployment.md
+      - 5.2 System integrator's guide: siva3/systemintegrators_guide.md
 - 6. QUALITY ASSURANCE: 
-      - 6.1 QA Strategy: siva2/qa_strategy.md
-      - 6.2 Test Plan: siva2/test_plan.md
-- 7. REFERENCES: siva2/references.md
+      - 6.1 QA Strategy: siva3/qa_strategy.md
+      - 6.2 Test Plan: siva3/test_plan.md
+- 7. REFERENCES: siva3/references.md
 - 8. APPENDICES:
-      - Appendix 1 - Validation Policy: siva2/appendix/validation_policy.md
-      - Appendix 2 - Test Case Descriptions: siva2/appendix/test_cases.md
-      - Appendix 3 - WSDL/XSD of SOAP Interface : siva2/appendix/wsdl.md
-      - Appendix 4 - Known Issues : siva2/appendix/known_issues.md
-- 9. SIVA 1.1 (Deprecated):
-      - 9.1. DEFINITIONS: siva/definitions.md
-      - 9.2. BACKGROUND: siva/overview.md
+      - Appendix 1 - Validation Policy: siva3/appendix/validation_policy.md
+      - Appendix 2 - Test Case Descriptions: siva3/appendix/test_cases.md
+      - Appendix 3 - WSDL/XSD of SOAP Interface : siva3/appendix/wsdl.md
+      - Appendix 4 - Known Issues : siva3/appendix/known_issues.md
+- 9. SIVA 2.0 (Deprecated):
+      - 9.1. DEFINITIONS: siva3/definitions.md
+      - 9.2. BACKGROUND: siva3/overview.md
       - 9.3. STRUCTURE & ACTIVITIES:
-            - 9.3.1 Component model: siva/v2/structure_and_activities.md
-            - 9.3.2 Use cases: siva/v2/use_cases.md
-      - 9.4. INTERFACES: siva/v2/interfaces.md
+           - 9.3.1 Component model: siva2/structure_and_activities.md
+           - 9.3.2 Use cases: siva2/use_cases.md
+      - 9.4. INTERFACES: siva2/interfaces.md
       - 9.5. DEPLOYMENT:
-            - 9.5.1 Deployment model: siva/v2/deployment.md
-            - 9.5.2 System integrator's guide: siva/v2/systemintegrators_guide.md
+           - 9.5.1 Deployment model: siva2/deployment.md
+           - 9.5.2 System integrator's guide: siva2/systemintegrators_guide.md
       - 9.6. QUALITY ASSURANCE: 
-            - 9.6.1 QA Strategy: siva/qa_strategy.md
-            - 9.6.2 Test Plan: siva/test_plan.md
-      - 9.7. REFERENCES: siva/references.md
+           - 9.6.1 QA Strategy: siva2/qa_strategy.md
+           - 9.6.2 Test Plan: siva2/test_plan.md
+      - 9.7. REFERENCES: siva2/references.md
       - 9.8. APPENDICES:
+           - Appendix 1 - Validation Policy: siva2/appendix/validation_policy.md
+           - Appendix 2 - Test Case Descriptions: siva2/appendix/test_cases.md
+           - Appendix 3 - WSDL/XSD of SOAP Interface : siva2/appendix/wsdl.md
+           - Appendix 4 - Known Issues : siva2/appendix/known_issues.md      
+- 10. SIVA 1.1 (Deprecated):
+      - 10.1. DEFINITIONS: siva/definitions.md
+      - 10.2. BACKGROUND: siva/overview.md
+      - 10.3. STRUCTURE & ACTIVITIES:
+            - 10.3.1 Component model: siva/v2/structure_and_activities.md
+            - 10.3.2 Use cases: siva/v2/use_cases.md
+      - 10.4. INTERFACES: siva/v2/interfaces.md
+      - 10.5. DEPLOYMENT:
+            - 10.5.1 Deployment model: siva/v2/deployment.md
+            - 10.5.2 System integrator's guide: siva/v2/systemintegrators_guide.md
+      - 10.6. QUALITY ASSURANCE: 
+            - 10.6.1 QA Strategy: siva/qa_strategy.md
+            - 10.6.2 Test Plan: siva/test_plan.md
+      - 10.7. REFERENCES: siva/references.md
+      - 10.8. APPENDICES:
             - Appendix 1 - Validation Policy: siva/appendix/validation_policy.md
             - Appendix 2 - Test Case Descriptions: siva/appendix/test_cases.md
             - Appendix 3 - WSDL of SOAP Interface : siva/appendix/wsdl.md
