--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server.max-http-post-size: 13981016 # 10 MB + base64 overhead (ceil(10MB / 3) * 4)
 
 siva:
+  endpoint:
+    dataFilesWebService: http://test:777
   proxy:
     xroadUrl: http://localhost:8081
   tsl:
