SIVA-137 hashcode datafile request/response improvement

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -9,6 +9,7 @@ validation.error.message.signaturePolicy = Invalid signature policy
 validation.error.message.general = Invalid value
 validation.error.message.invalidRequest = Invalid request
 validation.error.message.hashAlgo = Invalid hash algorithm
+validation.error.message.dataFiles = Invalid dataFiles list
 validation.error.message.signatureExtension= Invalid filename extension. Only xml files accepted.
 validation.error.message.filename.format = Invalid filename format
 validation.error.message.signatureFiles.invalid = Invalid SignatureFiles format
