--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ notifications:
     - andres.voll@nortal.com
     - aare.nurm@nortal.com
     - siim.suu@nortal.com
+    - jorgen.heinsoo@nortal.com
     on_success: change
     on_failure: always
