--- a/siva-parent/siva-signature-service/pom.xml
+++ b/siva-parent/siva-signature-service/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>dss-token</artifactId>
             <version>${dss.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>2.1.4</version>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
