--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -134,6 +134,11 @@
                 <version>${powermock.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.santuario</groupId>
+                <artifactId>xmlsec</artifactId>
+                <version>2.1.4</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>2.6</version>
