--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
                 <version>2.22.1</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+                    <argLine>${argLine} -Dfile.encoding=UTF-8 -Xmx1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
